cn/snowskystudio/newgame/test/error/ConfigurationFileDoesNotExists.py
from cn.snowskystudio.newgame.test.error.BaseError import BaseError


class ConfigurationFileDoesNotExists(BaseError):
    TYPE = "ConfigurationFileDoesNotExists"
